--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 .jumbotron {
   box-sizing: border-box;
   height: 600px;
-  background-color: rgba(0, 0, 0, 0);
+  background-image: url('assets/images/background.jpg');
 }
 
 .main-button-container {
@@ -45,6 +45,5 @@
 }
 
 body {
-  background-color: #DD0506;
   color: white;
 }
